--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,11 @@ dependencies:
     sdk: flutter
   circular_bottom_navigation: ^1.0.1
   cupertino_icons: ^0.1.3
+  carousel_pro: ^1.0.0
+  http: ^0.12.1
+  html: ^0.14.0+3
+  flutter_background_geolocation: ^1.9.3
+  geolocator: ^5.3.2+2
 
 dev_dependencies:
   flutter_test:
@@ -62,7 +67,9 @@ flutter:
       - asset: assets/fonts/Montserrat-Bold.ttf
       - asset: assets/fonts/Montserrat-Medium.ttf
       - asset: assets/fonts/Montserrat-Regular.ttf
-        
+    - family: CustomIcon
+      fonts:
+      - asset: assets/fonts/CustomIcon.ttf
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
