--- a/ios/Podfile
+++ b/ios/Podfile
@@ -78,6 +78,11 @@ target 'Runner' do
   end
 end
 
+target 'OneSignalNotificationServiceExtension' do
+  use_frameworks!
+  pod 'OneSignal', '>= 2.9.4', '< 3.0'
+end
+
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     target.build_configurations.each do |config|
@@ -85,3 +90,9 @@ post_install do |installer|
     end
   end
 end
+
+# Add the Firebase pod for Google Analytics
+pod 'Firebase/Analytics'
+
+# Add the pod for Firebase Cloud Messaging
+pod 'Firebase/Messaging'
