--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,13 @@ dependencies:
   carousel_pro: ^1.0.0
   http: ^0.12.1
   html: ^0.14.0+3
-  flutter_background_geolocation: ^1.9.3
   geolocator: ^5.3.2+2
+  firebase_messaging: ^6.0.16
+  path_provider: ^1.6.11
+  flutter_html: ^1.0.0
+  flutter_spinkit: ^4.1.2+1
+  carousel_slider: ^2.2.1
+  flutter_local_notifications: ^1.4.4+2
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +75,9 @@ flutter:
     - family: CustomIcon
       fonts:
       - asset: assets/fonts/CustomIcon.ttf
+    - family: FacebookCustomIcon
+      fonts:
+      - asset: assets/fonts/FacebookCustomIcon.ttf
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
