--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,9 +6,8 @@ buildscript {
     }
 
     dependencies {
-        // Example existing classpath
         classpath 'com.android.tools.build:gradle:3.5.3'
-        // Add the google services classpath
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.3.2'
     }
 }
