--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   flutter_spinkit: ^4.1.2+1
   carousel_slider: ^2.2.1
   flutter_local_notifications: ^1.4.4+2
+  geoflutterfire: ^2.1.0
+  google_maps_flutter: ^0.5.29
 
 dev_dependencies:
   flutter_test:
