--- a/ios/Podfile
+++ b/ios/Podfile
@@ -39,3 +39,9 @@ post_install do |installer|
     flutter_additional_ios_build_settings(target)
   end
 end
+
+# Add the Firebase pod for Google Analytics
+pod 'Firebase/Analytics'
+
+# Add the pod for Firebase Cloud Messaging
+pod 'Firebase/Messaging'
