--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.carsi1461">
+    package="com.carsi1461app.carsi1461app">
     <!-- io.flutter.app.FlutterApplication is an android.app.Application that
          calls FlutterMain.startInitialization(this); in its onCreate method.
          In most cases you can leave this as-is, but you if you want to provide
@@ -7,10 +7,12 @@
          FlutterApplication and put your custom class here. -->
          <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
          <uses-permission android:name="android.permission.VIBRATE" />
+         <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="carsi1461"
+        android:label="Çarşı 1461"
         android:icon="@mipmap/ic_launcher">
+        android:extractNativeLibs=false
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
@@ -58,5 +60,6 @@
             android:value="2" />
         <meta-data android:name="com.google.android.geo.API_KEY"
                android:value="AIzaSyBJVezqEQPpFM4DCGAUd4q9wwF1_gwyNbg"/>
+               
     </application>
 </manifest>
